navbar or something

--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
     <title>Document</title>
   </head>
   <body>
-    <div
-      class="first-page vh-100 d-flex align-items-center justify-content-center text-center"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h1>Hey!</h1>
-            <p>What is this?</p>
-          </div>
+    <div class="first-page vh-100">
+      <nav class="navbar navbar-expand">
+        <div class="container-fluid mx-5">
+          <a href="#" class="navbar-brand">Brand</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link disabled">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link disabled">Projects</a>
+            </li>
+          </ul>
         </div>
-      </div>
+      </nav>
     </div>
   </body>
 </html>
