hero section probably

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>What is this?</title>
   </head>
   <body>
-    <!-- Barra de navegación -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-body-tertiary">
       <div class="container-fluid">
         <button
@@ -53,6 +53,21 @@
         </div>
       </div>
     </nav>
+
+    <!-- Hero Section -->
+    <section class="hero align-items-stretch">
+      <div
+        class="hero-main d-flex flex-column justify-content-center align-items-center"
+      >
+        <img
+          class="hero-profile-img"
+          src="img/desarrollador6.svg"
+          alt="Person icon, just a random one"
+        />
+        <h1>Hey, it's me</h1>
+        <h2>Just trying to learn fucking Bootstrap</h2>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
