font family rubik something

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     crossorigin="anonymous" / >
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap"
+      rel="stylesheet"
+    />
     <title>What is this?</title>
   </head>
   <body>
