about-me section updated

--- a/index.html
+++ b/index.html
@@ -66,12 +66,40 @@
         class="hero-main d-flex flex-column justify-content-center align-items-center"
       >
         <img
-          class="hero-profile-img"
+          class="hero-profile-img rounded-circle"
           src="img/desarrollador6.svg"
           alt="Person icon, just a random one"
         />
         <h1>Hey, it's me</h1>
         <h2>Just trying to learn fucking Bootstrap</h2>
+      </div>
+
+      <div class="hero-inferior">
+        <img
+          id="hero-inferior-img"
+          class="hero-inferior-img img-fluid w-100"
+          src="img/hero-inferior.svg"
+          alt="Laptop and logos"
+        />
+      </div>
+    </section>
+
+    <!-- About Me -->
+    <section class="about-me section-dark">
+      <div class="about-me-container">
+        <h2 class="section-title">Meet Scott</h2>
+        <p class="section-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+          sagittis urna. Cras nibh risus, condimentum ut odio at, molestie
+          interdum nulla. Phasellus cursus in nisl et pretium. Sed a eros
+          aliquam, ultricies elit et, interdum ex. Curabitur dictum, risus eu
+          finibus commodo, massa purus lacinia velit, at eleifend tellus leo sit
+          amet justo. Nullam pharetra nulla ac magna ornare, ut pretium libero
+          bibendum. Nulla et sollicitudin ex. Proin mattis convallis diam nec
+          lacinia. Maecenas non orci sem. Suspendisse volutpat non sapien vitae
+          porttitor. Donec tincidunt enim in blandit consequat. Donec aliquet
+          aliquet quam, nec varius sem fermentum ut.
+        </p>
       </div>
     </section>
     <script
