--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
     crossorigin="anonymous" / >
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -102,6 +106,54 @@
         </p>
       </div>
     </section>
+
+    <!-- Experience -->
+    <section class="experience section-light">
+      <div class="container text-center">
+        <div class="row">
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experience-title">Desarrollo Web</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+              sagittis urna
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">HTML</span>
+              <span class="badge text-bg-primary">CSS</span>
+              <span class="badge text-bg-primary">JavaScript</span>
+              <span class="badge text-bg-primary">React</span>
+            </div>
+        </div>
+        <div class="column col-12 col-md-4">
+          <i class="bi bi-laptop"></i>
+          <p class="experience-title">Articles</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+            sagittis urna
+          </p>
+          <div class="badges-container">
+            <span class="badge text-bg-primary">Write</span>
+            <span class="badge text-bg-primary">Edit</span>
+            <span class="badge text-bg-primary">Blogs</span>
+          </div>
+      </div>
+      <div class="column col-12 col-md-4">
+        <i class="bi bi-laptop"></i>
+        <p class="experience-title">Student</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+          sagittis urna
+        </p>
+        <div class="badges-container">
+          <span class="badge text-bg-primary">freeCodeCamp</span>
+          <span class="badge text-bg-primary">Web Development</span>
+          <span class="badge text-bg-primary">Python</span>  
+        </div>
+    </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
