--- a/index.html
+++ b/index.html
@@ -124,34 +124,206 @@
               <span class="badge text-bg-primary">JavaScript</span>
               <span class="badge text-bg-primary">React</span>
             </div>
-        </div>
-        <div class="column col-12 col-md-4">
-          <i class="bi bi-laptop"></i>
-          <p class="experience-title">Articles</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
-            sagittis urna
-          </p>
-          <div class="badges-container">
-            <span class="badge text-bg-primary">Write</span>
-            <span class="badge text-bg-primary">Edit</span>
-            <span class="badge text-bg-primary">Blogs</span>
           </div>
-      </div>
-      <div class="column col-12 col-md-4">
-        <i class="bi bi-laptop"></i>
-        <p class="experience-title">Student</p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
-          sagittis urna
-        </p>
-        <div class="badges-container">
-          <span class="badge text-bg-primary">freeCodeCamp</span>
-          <span class="badge text-bg-primary">Web Development</span>
-          <span class="badge text-bg-primary">Python</span>  
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experience-title">Articles</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+              sagittis urna
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">Write</span>
+              <span class="badge text-bg-primary">Edit</span>
+              <span class="badge text-bg-primary">Blogs</span>
+            </div>
+          </div>
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-laptop"></i>
+            <p class="experience-title">Student</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac
+              sagittis urna
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">freeCodeCamp</span>
+              <span class="badge text-bg-primary">Web Development</span>
+              <span class="badge text-bg-primary">Python</span>
+            </div>
+          </div>
         </div>
-    </div>
       </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="recent-proyects section-light d-flex flex-column">
+      <h2 class="section-title text-black">Mis proyectos</h2>
+      <h3 class="section-description">
+        Estos son algunos proyectos que he hecho recientemente
+      </h3>
+
+      <!-- Proyect gallery -->
+
+      <div class="container text-center proyects-container">
+        <div class="row">
+          <!-- Proyect 1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto1.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyect 2 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto2.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 2</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyect 3 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto3.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 3</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyect 4 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto4.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 4</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyect 5 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto5.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 5</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyect 6 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyect">
+              <img src="img/proyecto6.png" alt="Proyect 1" />
+              <div class="overlay">
+                <p>Proyecto 6</p>
+                <div class="icons-container">
+                  <a
+                    href="https://github.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://www.freecodecamp.org/espanol/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-laptop"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="https://github.com" target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-info">
+          Ver más proyectos
+          <i class="bi bi-arrow-right-circle-fill"></i>
+        </button>
+      </a>
     </section>
 
     <script
